--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Document loader- calls scrapers and loads in data
+
+To run-
+1. Run CrawlerManager on port 9506
+2. Start neo4j- rake neo4j:start
+3. rails server
+4. Go to 0.0.0.0:3000 in a browser
